--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=DEBUG
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/GSK?createDatabaseIfNotExist=true&useSSL=true
 #spring.datasource.username=jalel
 #spring.datasource.password=Boug_2022
 #spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 #spring.jackson.serialization.fail-on-empty-beans=false
 
 
